2012-09-27  6.7.9-9 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JPEG decoder when reading a corrupt image (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21948).
  * Add exif:thumbnail namespace to distiguish orientation tag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21938).

2012-09-26  6.7.9-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-8, SVN revision 9437.

2012-09-24  6.7.9-8 Cristy  <quetzlzacatenango@image...>
  * Off-by-one error in DrawPolygonPrimitive().
  * Fix memory leak in WebP decoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21943).
  * Certain caption phrases were cut off (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21550).

2012-09-22  6.7.9-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-7, SVN revision 9410.

2012-09-20  6.7.9-7 Cristy  <quetzlzacatenango@image...>
  * jpeg:sampling-factor might be an image property or an option (reference
http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=21884).

2012-09-15  6.7.9-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-6, SVN revision 9375.

2012-09-14  6.7.9-6 Cristy  <quetzlzacatenango@image...>
  * Don't compand the YCC colorspace, its already companded.

2012-09-12  6.7.9-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.9-5, SVN revision 9358.

2012-09-12  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * Merge static inline Sigmoidal functions from IM7 to IM6.

2012-09-12  6.7.8-5 Anthony Thyssen <A.Thyssen@griffith...>
  * All untappered windowing filters Welch and Cosine changed to use a 3 lobe
    support (like Lanczos). These were not part of the original 'zoom' program.

2012-09-11  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
  * sigmoidal-contrast: prevent out of range argument.

2012-09-09  6.7.9-5 Cristy  <quetzlzacatenango@image...>